force-app/main/default/objects/SHT_Dave_Master__c/SHT_Dave_Master__c.object-meta.xml
<CustomObject>
    <label>Total Exposure</label>
    <nameField>
        <label>SHT Dave Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SHT Dave Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>