force-app/main/default/objects/SHT_Dave_Master__c/fields/Total_Exposure_Factor__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure_Factor__c</fullName>
    <label>Total Exposure Factor</label>
    <summarizedField>SHT_Dave__c.Exposure_Factor__c</summarizedField>
    <summaryFilterItems>
        <field>SHT_Dave__c.Transactions__c</field>
        <operation>equals</operation>
        <value>Sales</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SHT_Dave__c.Product_Name__c</field>
        <operation>notEqual</operation>
        <value>MOGAS 98, MOGAS E10, UGL95 E5, GasOil</value>
    </summaryFilterItems>
    <summaryForeignKey>SHT_Dave__c.SHT_Dave_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>