force-app/main/default/objects/SHT_Dave_Master__c/fields/Total_Exposure_Factor_MT__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure_Factor_MT__c</fullName>
    <formula>ABS(Total_Exposure_Factors__c  *100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Exposure Factor(MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>