force-app/main/default/objects/SHT_Dave_Master__c/fields/Total_Exposure_Factors__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure_Factors__c</fullName>
    <label>Total Exposure Factors</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>