force-app/main/default/objects/SHT_Dave_Master__c/fields/Total_Hedging__c.field-meta.xml
<CustomField>
    <fullName>Total_Hedging__c</fullName>
    <label>Hedged</label>
    <summarizedField>SHT_Dave__c.Hedge__c</summarizedField>
    <summaryFilterItems>
        <field>SHT_Dave__c.Transactions__c</field>
        <operation>equals</operation>
        <value>Hedge</value>
    </summaryFilterItems>
    <summaryForeignKey>SHT_Dave__c.SHT_Dave_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>