force-app/main/default/objects/SHT_Dave_Master__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Total_Exposure_Factors__c</columns>
    <columns>Hedged__c</columns>
    <columns>Final_Exposure_Factor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Hedge</label>
</ListView>